GNOME Bugzilla – Bug 689688
undefined symbol: bacon_video_widget_get_type
Last modified: 2012-12-05 20:32:48 UTC
get logged into .xsession-errors at boot time on RR i386 logged as gnome-classic: ** (nautilus:3297): WARNING **: /usr/lib/nautilus/extensions-3.0/libtotem-properties-page.so: undefined symbol: bacon_video_widget_get_type reported on launchpad: https://bugs.launchpad.net/totem/+bug/1086300
This isn't Totem 3.6. The BaconVideoWidget isn't used in the totem properties page.
The version is totem 3.6.3 and it's there is no code patch that should impact on that totem-properties-view.c: ... struct TotemPropertiesViewPriv { ... BaconVideoWidgetProperties *props; ... } is that struct being used in the property page and could that create the issue?
Created attachment 230810 [details] [review] properties: Fix loading when built with some linkers Some unused symbols, brought in through the libtotem-player.la internal library are still getting resolved by some linkers causing the properties module to fail loading.
Attachment 230810 [details] pushed as bcafeb0 - properties: Fix loading when built with some linkers
FWIW, the problem didn't appear on Fedora for example. Not sure why it would try to resolve symbols that just aren't used.
Thanks Bastien, that fixes it indeed. Not sure what are the differences on the toolchain, the Ubuntu one uses --as-needed by default but I think it's common nowadays ... -Bsymbolic-functions is used by default so it could be it though In case case the issue is fixed with that commit