properties: Fix loading when built with some linkers

Some unused symbols, brought in through the libtotem-player.la internal
library are still getting resolved by some linkers causing the properties
module to fail loading.

https://bugzilla.gnome.org/show_bug.cgi?id=689688